1/11/ping-pong/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: exercise-1.11-pv
          persistentVolumeClaim:
            claimName: exercise-1.11-claim
      containers:
        - name: ping-pong
          image: draganculibrk9/ping-pong:latest
          volumeMounts:
            - name: exercise-1.11-pv
              mountPath: /usr/src/app/files
